@startuml Variant

hide private members

namespace Cpp {
    namespace Variant {
        ' *************** ALGORITHMS ***************
        class HeaderGenerator {
            +generate(Variant in) : string
        }

        class Translator
        {
            +visit(PlantUml.Variable v)     : bool
            +visit(PlantUml.Method m)       : bool
            +visit(PlantUml.Relationship r) : bool
            +visit(PlantUml.Container c)    : bool
            +visit(PlantUml.Element e)      : bool
            +visit(PlantUml.Note n)         : bool
            +visit(PlantUml.Separator s)    : bool
            +visit(PlantUml.Enumerator e)   : bool
            +visit(PlantUml.Parameter p)    : bool
            +visit(PlantUml.End e)          : bool
            +visit(PlantUml.Type t)         : bool

            +results() : vector<Variant>
        }
        Translator .|> PlantUml.AbstractVisitor
        Translator -left-> HeaderGenerator


        class VariantGenerator implements Main.Generator {
            +generate(PlantUml.SyntaxNode root) : vector<File>
        }
        VariantGenerator *-- Translator
        VariantGenerator *-- HeaderGenerator

        class Variant << (S,#FFAA55) >>
        {
            +name  : string
            +namespaces : list<string>
            +comment : string
        }

        Variant *-- "0..*" Cpp.Type : containedTypes
    }
}
@enduml